--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       ports:
         - 80
       volumes:
-        - my_docker_volume:/volume_mount
+        - /var/run/docker.sock:/var/run/docker.sock
       options: --cpus 1
     steps:
       - name: Check for dockerenv file
